--- a/client/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios-modais/adicionar-funcionarios-modal/adicionar-funcionarios-modal.component.html
+++ b/client/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios-modais/adicionar-funcionarios-modal/adicionar-funcionarios-modal.component.html
@@ -90,6 +90,9 @@
                     #dataNascimento="ngModel"
                     (focus)="clearValueInvalid()"
                     (blur)="updateDataNascimento()"
+                    mask="00/00/0000"
+                    [ngModelOptions]="{ updateOn: 'blur' }"
+                    required
                   />
 
                   <label for="dataNascimento">Data de Nascimento</label>
