--- a/client/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios-modais/excluir-funcionarios-modal/excluir-funcionarios-modal.component.html
+++ b/client/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios-modais/excluir-funcionarios-modal/excluir-funcionarios-modal.component.html
@@ -25,7 +25,7 @@
               </tr>
               <tr>
                 <td class="tbody-header">Data de Nascimento:</td>
-                <td class="tbody-result">{{ funcionarioParaExcluir.dataNascimento }}</td>
+                <td class="tbody-result">{{ funcionarioParaExcluir.dataNascimento | date:'dd/MM/yyyy' }}</td>
               </tr>
             </tbody>
           </table>
