--- a/client/src/app/cliente-pages/homepage-cliente/homepage-cliente.component.css
+++ b/client/src/app/cliente-pages/homepage-cliente/homepage-cliente.component.css
@@ -1,3 +1,27 @@
+.table-em-aberto {
+    background-color: rgba(255, 213, 0, 0.6);
+}
+
+.table-rejeitado-cancelado {
+    background-color: rgba(217, 4, 41, 0.6);
+}
+
+.table-recolhido {
+    background-color: rgba(108, 117, 125, 0.6);
+}
+
+.table-aguardando-pagamento {
+    background-color: rgba(0, 180, 216, 0.6);
+}
+
+.table-pago {
+    background-color: rgba(244, 140, 6, 0.6);
+}
+
+.table-finalizado {
+    background-color: rgba(82, 183, 136, 0.6);
+}
+
 .text-center {
     text-align: center;
 }
@@ -37,32 +61,6 @@ th {
     background-color: inherit;
 }
 
-
-.table-warning td {
-    background-color: #fff3cd;
-}
-
-.table-danger td {
-    background-color: #f8d7da;
-}
-
-.table-secondary td {
-    background-color: #e2e3e5;
-}
-
-.table-info td {
-    background-color: #d1ecf1; 
-}
-
-.table-success td {
-    background-color: #d4edda; 
-}
-
-.table-primary td {
-    background-color: #cce5ff; 
-}
-
-
 ul.list-inline {
     padding: 0;
     margin: 0;
@@ -91,28 +89,4 @@ ul.list-inline li {
 .text-center p {
     margin: 0;
     font-size: 16px;
-}
-
-.text-yellow {
-    color: #ffd500;
-}
-  
-.text-red {
-    color: #d90429;
-}
-  
-.text-gray {
-    color: #6c757d;
-}
-  
-.text-blue {
-    color: #00b4d8;
-}
-  
-.text-orange {
-    color: #f48c06;
-}
-  
-.text-green {
-    color: #52b788;
 }
