--- a/client/src/app/cliente-pages/pedidos/pedidos.component.css
+++ b/client/src/app/cliente-pages/pedidos/pedidos.component.css
@@ -1,31 +1,27 @@
-.amarelo {
-    background-color: yellow;
-  }
-  
-  .vermelho {
-    background-color: red;
-  }
-  
-  .cinza {
-    background-color: gray;
-  }
-  
-  .azul {
-    background-color: blue;
-  }
-  
-  .laranja {
-    background-color: orange;
-  }
-  
-  .verde {
-    background-color: green;
-  }
-  
-  .roxo {
-    background-color: purple;
-  }
-  
+.table-em-aberto {
+  background-color: rgba(255, 213, 0, 0.6);
+}
+
+.table-rejeitado-cancelado {
+  background-color: rgba(217, 4, 41, 0.6);
+}
+
+.table-recolhido {
+  background-color: rgba(108, 117, 125, 0.6);
+}
+
+.table-aguardando-pagamento {
+  background-color: rgba(0, 180, 216, 0.6);
+}
+
+.table-pago {
+  background-color: rgba(244, 140, 6, 0.6);
+}
+
+.table-finalizado {
+  background-color: rgba(82, 183, 136, 0.6);
+}
+
   .text-center {
     text-align: center; 
   }
@@ -100,38 +96,8 @@
       text-align: center; 
     }
     
-  
     tbody tr {
       transition: background-color 0.3s; 
-    }
-    
-    tbody tr:hover {
-      background-color: #f1f1f1; 
-    }
-    
-    
-    .table-warning td {
-      background-color: #fff3cd;
-    }
-    
-    .table-danger td {
-      background-color: #f8d7da;
-    }
-    
-    .table-secondary td {
-      background-color: #e2e3e5; 
-    }
-    
-    .table-info td {
-      background-color: #d1ecf1;
-    }
-    
-    .table-success td {
-      background-color: #d4edda;
-    }
-    
-    .table-primary td {
-      background-color: #cce5ff; 
     }
     
   .date-filter {
@@ -164,27 +130,3 @@
       background-color: #f8f9fa;
     }
     
-
-.text-yellow {
-    color: #ffd500;
-}
-  
-.text-red {
-    color: #d90429;
-}
-  
-.text-gray {
-    color: #6c757d;
-}
-  
-.text-blue {
-    color: #00b4d8;
-}
-  
-.text-orange {
-    color: #f48c06;
-}
-  
-.text-green {
-    color: #52b788;
-}
